plugins {
    id 'com.github.ben-manes.versions' version '0.39.0'
    id 'java'
}

allprojects {
    apply plugin: 'com.github.ben-manes.versions'
    apply plugin: 'java'

    repositories {
        mavenCentral()
        mavenLocal()
        maven { url 'https://www.jitpack.io' }
        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
    }

    sourceCompatibility = 17
    targetCompatibility = 17

    ext {
        mainClassName = "inside.Launcher"

        d4j_version = "master-SNAPSHOT"
        d4j_json_version = "1.7.1-SNAPSHOT"
        r2dbc_postgresql_group = "com.github.pgjdbc:r2dbc-postgresql"
        r2dbc_postgresql_version = "0.9.0.RELEASE"
        r2dbc_pool_version = "0.9.0.RELEASE"
        logback_version = "1.2.9"

        immutables_version = "2.9.0-rc1"
        jackson_version = "2.13.0"
        javax_annotation = "1.3.2"
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
        options.incremental = true
    }

    dependencies {
        implementation "com.github.discord4j:discord4j:$d4j_version"
        implementation "io.r2dbc:r2dbc-pool:$r2dbc_pool_version"
        implementation "$r2dbc_postgresql_group:$r2dbc_postgresql_version"
    }
}

dependencies {
    implementation project(':core')
    implementation project(':data')

    runtimeOnly "ch.qos.logback:logback-classic:$logback_version"

    compileOnly "org.immutables:value:$immutables_version"
    compileOnly "com.discord4j:discord-json-encoding:$d4j_json_version"

    annotationProcessor "org.immutables:value:$immutables_version"
    compileOnly "org.immutables:encode:$immutables_version"
    compileOnly "javax.annotation:javax.annotation-api:$javax_annotation"

    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jackson_version"
    implementation "com.fasterxml.jackson.module:jackson-module-parameter-names:$jackson_version"
}

jar {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }

    manifest {
        attributes 'Main-Class': project.mainClassName
    }
}
